Batch Bills and Get Organization info added
