# docs/mn/swagger.json
@@ -92,6 +92,26 @@
                 }
             }
         },
+        "/organization/{register}": {
+            "get": {
+                "description": "Байгууллагын мэдээллийг регистрийн дугаараар авах",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ebarimt"
+                ],
+                "summary": "Байгууллагын мэдээллийг регистрийн дугаараар авах",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/helper.OrganizationInfo"
+                        }
+                    }
+                }
+            }
+        },
         "/put": {
             "post": {
                 "description": "Өгөгдсөн мэдээллийг ашиглан системд нэхэмжлэхийг нэмэх.",
@@ -126,9 +146,43 @@
                 }
             }
         },
+        "/put-batch": {
+            "post": {
+                "description": "Өгөгдсөн мэдээллийг ашиглан системд нэхэмжлэхийг нэмэх.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ebarimt"
+                ],
+                "summary": "Системд багц баримтын нэхэмжлэхийг оруулах",
+                "parameters": [
+                    {
+                        "description": "Bills data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/posapi.PutInputBatch"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/posapi.PutOutput"
+                        }
+                    }
+                }
+            }
+        },
         "/return": {
             "post": {
-                "description": "Return a bill with the provided data.\nӨгөгдсөн мэдээллийг ашиглан нэхэмжлэхийг буцаах.",
+                "description": "Өгөгдсөн мэдээллийг ашиглан нэхэмжлэхийг буцаах.",
                 "consumes": [
                     "application/json"
                 ],
@@ -162,14 +216,14 @@
         },
         "/send": {
             "get": {
-                "description": "Send data via the API.",
+                "description": "Баримтын мэдээллийг илгээх API.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "ebarimt"
                 ],
-                "summary": "Transmit data",
+                "summary": "Баримтын мэдээллийг илгээх",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -182,6 +236,33 @@
         }
     },
     "definitions": {
+        "helper.OrganizationInfo": {
+            "type": "object",
+            "properties": {
+                "citypayer": {
+                    "type": "boolean"
+                },
+                "found": {
+                    "type": "boolean"
+                },
+                "freeProject": {
+                    "type": "boolean"
+                },
+                "lastReceiptDate": {},
+                "name": {
+                    "type": "string"
+                },
+                "receiptFound": {
+                    "type": "boolean"
+                },
+                "vatpayer": {
+                    "type": "boolean"
+                },
+                "vatpayerRegisteredDate": {
+                    "type": "string"
+                }
+            }
+        },
         "posapi.BankTransaction": {
             "type": "object",
             "properties": {
@@ -198,6 +279,74 @@
                     "type": "string"
                 },
                 "terminalId": {
+                    "type": "string"
+                }
+            }
+        },
+        "posapi.Bill": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "string"
+                },
+                "bankTransactions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/posapi.BankTransaction"
+                    }
+                },
+                "billIdSuffix": {
+                    "type": "string"
+                },
+                "billType": {
+                    "type": "string"
+                },
+                "branchNo": {
+                    "type": "string"
+                },
+                "cashAmount": {
+                    "type": "string"
+                },
+                "cityTax": {
+                    "type": "string"
+                },
+                "customerNo": {
+                    "type": "string"
+                },
+                "districtCode": {
+                    "type": "string"
+                },
+                "internalId": {
+                    "type": "string"
+                },
+                "invoiceId": {
+                    "type": "string"
+                },
+                "nonCashAmount": {
+                    "type": "string"
+                },
+                "posNo": {
+                    "type": "string"
+                },
+                "registerNo": {
+                    "type": "string"
+                },
+                "reportMonth": {
+                    "type": "string"
+                },
+                "returnBillId": {
+                    "type": "string"
+                },
+                "stocks": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/posapi.Stock"
+                    }
+                },
+                "taxType": {
+                    "type": "string"
+                },
+                "vat": {
                     "type": "string"
                 }
             }
@@ -378,6 +527,35 @@
                 }
             }
         },
+        "posapi.PutInputBatch": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "string"
+                },
+                "billIdSuffix": {
+                    "type": "string"
+                },
+                "billType": {
+                    "type": "string"
+                },
+                "bills": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/posapi.Bill"
+                    }
+                },
+                "group": {
+                    "type": "boolean"
+                },
+                "posNo": {
+                    "type": "string"
+                },
+                "vat": {
+                    "type": "string"
+                }
+            }
+        },
         "posapi.PutOutput": {
             "type": "object",
             "properties": {
@@ -390,6 +568,9 @@
                 "date": {
                     "type": "string"
                 },
+                "errorCode": {
+                    "type": "integer"
+                },
                 "internalCode": {
                     "type": "string"
                 },
@@ -400,6 +581,9 @@
                     "type": "string"
                 },
                 "macAddress": {
+                    "type": "string"
+                },
+                "message": {
                     "type": "string"
                 },
                 "qrData": {
